// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marginBlock renders 0 1`] = `
Array [
  .c0 {
  margin-block: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlock renders function 1`] = `
Array [
  .c0 {
  margin-block: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: has;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: has;
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlock renders invalid theme path 1`] = `
Array [
  .c0 {
  margin-block: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlock renders negative number 1`] = `
Array [
  .c0 {
  margin-block: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlock renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  margin-block: July;
}

@media screen and (min-width:November) {
  .c0 {
    margin-block: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-block: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  margin-block: July;
}

@media screen and (min-width:November) {
  .c0 {
    margin-block: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-block: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  margin-block: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-block: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-block: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-block: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-block: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlock renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    margin-block: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-block: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    margin-block: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-block: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-block: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-block: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin-block: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin-block: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin-block: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlock renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  margin-block: July;
}

@media May {
  .c0 {
    margin-block: August;
  }
}

@media April {
  .c0 {
    margin-block: September;
  }
}

@media January {
  .c0 {
    margin-block: November;
  }
}

@media April {
  .c0 {
    margin-block: August;
  }
}

@media June {
  .c0 {
    margin-block: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  margin-block: July;
}

@media May {
  .c0 {
    margin-block: August;
  }
}

@media April {
  .c0 {
    margin-block: September;
  }
}

@media January {
  .c0 {
    margin-block: November;
  }
}

@media April {
  .c0 {
    margin-block: August;
  }
}

@media June {
  .c0 {
    margin-block: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  margin-block: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-block: November;
  }
}

@media April {
  .c0 {
    margin-block: January;
  }
}

@media January {
  .c0 {
    margin-block: December;
  }
}

@media April {
  .c0 {
    margin-block: April;
  }
}

@media June {
  .c0 {
    margin-block: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-block: November;
  }
}

@media April {
  .c0 {
    margin-block: January;
  }
}

@media January {
  .c0 {
    margin-block: December;
  }
}

@media April {
  .c0 {
    margin-block: April;
  }
}

@media June {
  .c0 {
    margin-block: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlock renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    margin-block: July;
  }
}

@media April {
  .c0 {
    margin-block: August;
  }
}

@media January {
  .c0 {
    margin-block: September;
  }
}

@media April {
  .c0 {
    margin-block: November;
  }
}

@media June {
  .c0 {
    margin-block: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    margin-block: July;
  }
}

@media April {
  .c0 {
    margin-block: August;
  }
}

@media January {
  .c0 {
    margin-block: September;
  }
}

@media April {
  .c0 {
    margin-block: November;
  }
}

@media June {
  .c0 {
    margin-block: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-block: January;
  }
}

@media April {
  .c0 {
    margin-block: December;
  }
}

@media January {
  .c0 {
    margin-block: April;
  }
}

@media April {
  .c0 {
    margin-block: May;
  }
}

@media June {
  .c0 {
    margin-block: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin-block: January;
  }
}

@media April {
  .c0 {
    margin-block: December;
  }
}

@media January {
  .c0 {
    margin-block: April;
  }
}

@media April {
  .c0 {
    margin-block: May;
  }
}

@media June {
  .c0 {
    margin-block: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlock renders postitive number 1`] = `
Array [
  .c0 {
  margin-block: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlock renders string 1`] = `
Array [
  .c0 {
  margin-block: July;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: July;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: June;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: June;
}

<div
    className="c0"
  />,
]
`;

exports[`marginBlock renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`marginBlock renders valid theme path 1`] = `
Array [
  .c0 {
  margin-block: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin-block: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
